--- a/week-2/Homework/1-exercises/style.css
+++ b/week-2/Homework/1-exercises/style.css
@@ -11,6 +11,10 @@ body {
 	font-family: "Source Sans Pro",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
+.blueberry{display:flex;
+
+flex-direction:column;}
+
 .site-footer {
 	margin-top: 4em;
 }
