--- a/week-2/Homework/1-exercises/style.css
+++ b/week-2/Homework/1-exercises/style.css
@@ -12,8 +12,24 @@ body {
 }
 
 .blueberry{display:flex;
+flex-direction:row;
+margin:2em;
+list-style:none;
+}
 
-flex-direction:column;}
+.blueberry2{padding:1em;}
+
+.blueberry3{
+	margin:2em;
+}
+
+.blueberry4{
+	list-style:none;
+	display:flex;
+	justify-content:space-around;
+	flex-direction:row;
+}
+
 
 .site-footer {
 	margin-top: 4em;
